# web-applications-with-fastapi-course

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  revisions.md
code-aaron/ch3-hello-fastapi-world/: main.py
code-aaron/ch4-templates/: main.py  requirements.txt
code-aaron/ch5-viewmodels/: requirements.txt
code-aaron/ch6-userforms/: requirements.txt
code-aaron/ch7-databases/: README.md  main.py  requirements.txt
code/ch3-hello-fastapi-world/: main.py  requirements.txt
code/ch4-templates/: main.py  requirements.in  requirements.txt
code/ch5-viewmodels/: requirements.piptools  requirements.txt
code/ch6-users-and-forms/: main.py  requirements.piptools  requirements.txt
code/ch7-databases/: main.py  requirements.in  requirements.txt
code/ch8-async-databases/: main.py  requirements.in  requirements.piptools  requirements.txt
code/ch9-deployment/: readme.md
code/ch90-appendix-sqlalchemy-models/: readme.md
code/ch91-appendix-using-sqlalchemy/: readme.md
data/pypi-top-100/: amqp.json  appdirs.json  argparse.json  asn1crypto.json  awscli-cwlogs.json  awscli.json  babel.json  beautifulsoup4.json  boto.json  boto3.json  botocore.json  certifi.json  cffi.json  chardet.json  click.json  colorama.json  coverage.json  cryptography.json  cython.json  decorator.json  django.json  docopt.json  docutils.json  elasticsearch.json  enum34.json  flake8.json  flask.json  funcsigs.json  functools32.json  future.json  futures.json  gevent.json  greenlet.json  gunicorn.json  httplib2.json  idna.json  (+60 more)
tests/: test_webapps_fa.py
webapps_fa/: main.py
(+119 files in other folders)
