[tool.poetry]
name = "talkpytohn-webapps-fa"
version = "0.1.0"
description = ""
authors = ["Andrei Horbach <andrewhorbach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
